# let-history-talk

./: .gitignore  .pre-commit-config.yaml  00_create_index.ipynb  01_write_summary.ipynb  03_tts.ipynb  README.md  pyproject.toml  requirements.txt
let_history_talk/: models.py  script_to_audio.py
nbs/: 00_create_index.ipynb  01_write_summary.ipynb  02_create_podcast_storyline.ipynb  03_tts.ipynb
