[project]
name = "let-history-talk"
version = "0.1.0"
description = "A series of ipynb files to create podcasts from historical topics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "kokoro>=0.8.4",
    "llama-index>=0.12.24",
    "llama-index-llms-anthropic>=0.6.10",
    "llama-index-llms-ollama>=0.5.3",
    "pip>=25.0.1",
    "python-dotenv>=1.0.1",
    "soundfile>=0.13.1",
    "wikipedia-api>=0.8.1",
]

[dependency-groups]
dev = [
    "nbdev>=2.3.35",
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"